rns-lang/tests/snapshots/parser-outside_class_directive-identifier_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----



HelloWorld
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected identifier
   ╭─[ test_data/integration/parser/outside_class_directive/identifier_outside.ja:4:1 ]
   │
 4 │ HelloWorld
   │ ─────┬────  
   │      ╰────── The 'HelloWorld' identifier cannot appear before a class is defined.
   │ 
   │ Note: A Java assembly file must start with a '.class' definition.
───╯
